<resources>
    <string name="app_name">LockTeacher</string>

    <!-- Strings related to login -->
    <string name="bienvenida">Bienvenido a LockTeacher</string>
    <string name="descripcion">Introduzca su nombre y un pin de 4 numeros, para acceder a la configuracion.</string>
    <string name="nombre">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="descrip">Introduzca su verificacion</string>
    <string name="next">Siguiente</string>
    <string name="asignatura">Seleccione las asignaturas a mostrar</string>
    <string name="edad">Introduzca la edad del niño:</string>
    <string name="edad2">(la edad debe estar comprendida entre 3 y 10)</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="matematicas">Matematicas</string>
    <string name="ingles">Ingles</string>
    <string name="castellano">Castellano</string>
    <string name="aciertos">Aciertos:</string>
    <string name="fallos">Fallos:</string>
    <string-array name="asig">
        <item>Castellano</item>
        <item>Ingles</item>
        <item>Matematicas</item>
    </string-array>
</resources>
