<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.al.josev.lockteacher.Estadistica">

    <!-- Login progress -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:background="#aec9e8"
        android:id="@+id/lay_login"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/estadisticas"
            android:id="@+id/bie"
            android:layout_weight="0.03"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/matematicas"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.14"
            android:textColor="#ffffff" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.91">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/aciertos"
                    android:id="@+id/id5"
                    android:layout_weight="0.03"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fallos"
                    android:id="@+id/id6"
                    android:layout_weight="0.02"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ingles"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.01"
                android:textColor="#ffffff" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/aciertos"
                    android:id="@+id/id7"
                    android:layout_weight="0.03"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fallos"
                    android:id="@+id/id8"
                    android:layout_weight="0.02"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/castellano"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.01"
                android:textColor="#ffffff" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/aciertos"
                    android:id="@+id/id9"
                    android:layout_weight="0.03"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fallos"
                    android:id="@+id/id10"
                    android:layout_weight="0.02"
                    android:textColor="#ffffff" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
